--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,17 +1,17 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.3.9",
-    "com.unity.ide.rider": "3.0.6",
-    "com.unity.ide.visualstudio": "2.0.8",
+    "com.unity.collab-proxy": "1.7.1",
+    "com.unity.ide.rider": "3.0.7",
+    "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.mobile.android-logcat": "1.2.1",
-    "com.unity.test-framework": "1.1.24",
+    "com.unity.mobile.android-logcat": "1.2.3",
+    "com.unity.test-framework": "1.1.27",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.5.5",
+    "com.unity.timeline": "1.6.1",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arcore": "4.1.7",
-    "com.unity.xr.arfoundation": "4.1.7",
-    "com.unity.xr.management": "4.0.5",
+    "com.unity.xr.arcore": "4.2.0-pre.5",
+    "com.unity.xr.arfoundation": "4.2.0-pre.5",
+    "com.unity.xr.management": "4.0.7",
     "com.unity.xr.mock-hmd": "1.3.0-preview.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
