--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.15.15",
-    "com.unity.ide.visualstudio": "2.0.14",
+    "com.unity.collab-proxy": "1.15.17",
+    "com.unity.ide.visualstudio": "2.0.15",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.mobile.android-logcat": "1.2.3",
     "com.unity.test-framework": "2.0.1-pre.18",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.0-pre.2",
+    "com.unity.timeline": "1.7.1",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arcore": "5.0.0-pre.8",
-    "com.unity.xr.arfoundation": "5.0.0-pre.8",
+    "com.unity.xr.arcore": "5.0.0-pre.9",
+    "com.unity.xr.arfoundation": "5.0.0-pre.9",
     "com.unity.xr.legacyinputhelpers": "2.1.9",
     "com.unity.xr.management": "4.2.1",
     "com.unity.xr.mock-hmd": "1.3.0-preview.1",
