--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,16 +1,14 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.15.18",
-    "com.unity.ide.visualstudio": "2.0.16",
-    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.collab-proxy": "1.17.7",
+    "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.mobile.android-logcat": "1.3.2",
-    "com.unity.test-framework": "2.0.1-pre.18",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.1",
+    "com.unity.timeline": "1.8.0",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arcore": "5.0.0-pre.12",
-    "com.unity.xr.arfoundation": "5.0.0-pre.12",
-    "com.unity.xr.legacyinputhelpers": "2.1.9",
+    "com.unity.xr.arcore": "5.0.3",
+    "com.unity.xr.arfoundation": "5.0.3",
+    "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.xr.management": "4.2.1",
     "com.unity.xr.mock-hmd": "1.3.0-preview.1",
     "com.unity.modules.ai": "1.0.0",
