--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,18 +1,16 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.0.1",
-    "com.unity.ide.visualstudio": "2.0.17",
+    "com.unity.collab-proxy": "2.0.7",
+    "com.unity.ide.visualstudio": "2.0.21",
     "com.unity.mobile.android-logcat": "1.3.2",
-    "com.unity.subsystemregistration": "1.1.2",
-    "com.unity.test-framework": "1.3.3",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.8.1",
-    "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arcore": "5.1.0-pre.3",
-    "com.unity.xr.arfoundation": "5.1.0-pre.3",
-    "com.unity.xr.core-utils": "2.2.0",
+    "com.unity.test-framework": "1.3.9",
+    "com.unity.timeline": "1.8.5",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.xr.arcore": "5.1.0",
+    "com.unity.xr.arfoundation": "5.1.0",
+    "com.unity.xr.core-utils": "2.2.3",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
-    "com.unity.xr.management": "4.2.1",
+    "com.unity.xr.management": "4.4.0",
     "com.unity.xr.mock-hmd": "1.3.1-preview.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
