Update to AR Foundation 6.0.1 and changed ImageTracking
ImageTracking now uses UnityEvents instead of C# events, resulting in a different way of adding listeners and a different parameter when tracked images changed. Removed images now seem to return a KeyValuePair instead of a single image.

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.2.0",
+    "com.unity.collab-proxy": "2.3.1",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.mobile.android-logcat": "1.4.0",
-    "com.unity.test-framework": "1.4.3",
+    "com.unity.mobile.android-logcat": "1.4.1",
+    "com.unity.test-framework": "1.4.4",
     "com.unity.timeline": "1.8.6",
     "com.unity.ugui": "2.0.0",
-    "com.unity.xr.arcore": "6.0.0-pre.5",
-    "com.unity.xr.arfoundation": "6.0.0-pre.5",
+    "com.unity.xr.arcore": "6.0.1",
+    "com.unity.xr.arfoundation": "6.0.1",
+    "com.unity.xr.arkit": "6.0.1",
     "com.unity.xr.core-utils": "2.3.0",
     "com.unity.xr.legacyinputhelpers": "2.1.10",
     "com.unity.xr.management": "4.4.1",
